2008-03-10  Martin Leidig  <mleidig@schlund.de>

	* skel/build-skel.xml: adjusted pattern to match  pfixcore-data archive
	to support both traditional and maven file naming style.

2008-03-10  Martin Leidig  <mleidig@schlund.de>

	Released Pfixcore 0.12.2.

	* build.xml: changed version
	* pom.xml: changed version

2008-03-10  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixcore/webservice/jaxws/generate/WebserviceTask.java: Keep
	sources generated by WSGen (because when only building .class files, it can
	happen that the IDE removes these files).
	* .classpath: add JAXB API to classpath.

2008-03-09  schst  <schst@stubbles.net>

	Added writeCDataSection(String cdata) method to the XMLWriter:
	* src/de/schlund/pfixcore/oxm/impl/DOMWriter.java
	* src/de/schlund/pfixcore/oxm/impl/XMLWriter.java
	
	Added new OXM serializer for CData section:
	* src/de/schlund/pfixcore/oxm/impl/serializers/CDataSerializer.java
	* src/de/schlund/pfixcore/oxm/impl/annotation/CDataSerializer.java
	* tests/junit/de/schlund/pfixcore/oxm/CDataTestBean.java

	Removed element name parameter from XMLWriter.writeEndElement() as it
	should always close the last opened element:
	* src/de/schlund/pfixcore/oxm/impl/DOMWriter.java
	* src/de/schlund/pfixcore/oxm/impl/serializers/BeanSerializer.java
	* src/de/schlund/pfixcore/oxm/impl/serializers/CollectionSerializer.java
	* src/de/schlund/pfixcore/oxm/impl/serializers/ComplexEnumSerializer.java
	* src/de/schlund/pfixcore/oxm/impl/serializers/PropertiesSerializer.java
	* src/de/schlund/pfixcore/oxm/impl/serializers/MapSerializer.java
	* src/de/schlund/pfixcore/oxm/impl/serializers/ArraySerializer.java
	* src/de/schlund/pfixcore/oxm/impl/XMLWriter.java

	Removed obsolete debugging code and did some cosmetic changes:
	* src/de/schlund/pfixcore/oxm/impl/serializers/BeanSerializer.java
	* src/de/schlund/pfixcore/oxm/impl/serializers/ClassSerializer.java
	* src/de/schlund/pfixcore/oxm/impl/serializers/ForceElementSerializer.java